# hosting

./: .env  AUTH_IMPLEMENTATION.md  AUTH_QUICK_START.md  QUICKSTART.md  alembic.ini  create_env.py  pyproject.toml  requirements.txt  run.py
.cursor/rules/: isp.mdc
app/: main.py
app/core/: config.py  db.py  logging_config.py  models.py  rabbitmq.py
app/integrations/: __init__.py  ispmanager.py
app/middleware/: __init__.py  security.py
app/migrations/sql/: 001__initial_schema.sql
app/migrations/versions/: eb55377110e8_add_authusers_model_for_authentication.py
app/modules/auth/: models.py  routes.py  schemas.py
app/modules/billing/: routes.py  schemas.py
app/modules/domains/: models.py  routes.py  schemas.py
app/modules/hosting/: models.py  routes.py  schemas.py
app/modules/notifications/: consumer.py  models.py  producer.py  routes.py  schemas.py
app/modules/plans/: routes.py  schemas.py
app/modules/security/: security.py
app/modules/support/: __init__.py  gigachat_service.py  init_knowledge_base.py  models.py  routes.py  schemas.py
app/modules/users/: models.py  routes.py  schemas.py
app/shared/: base_model.py  repository.py
app/tasks/: worker.py
docs/: backend_deploy.md
frontend/: README.md  env.example  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
migrations/: env.py
migrations/versions/: 1cbff43fdd0d_add_support_tables.py  41527b171794_add_support_tables.py  eb55377110e8_add_authusers_model_for_authentication.py
scripts/: deploy_frontend.sh
(+6 files in other folders)
